--- a/javascript_basics.css
+++ b/javascript_basics.css
@@ -1,1 +1,85 @@
+.container {
+    background:rgb(44, 44, 116);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+}
 
+.header {
+    background: red;
+    color: white;
+    font-weight: bold;
+    width: 98%;
+    justify-content: center;
+    border-radius: 25px;
+    padding: 20px;
+}
+
+.body_1{
+    display: flex;
+    flex-direction: row;
+    justify-content: top;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+}
+
+.sidebar {
+    display: flex;
+    background: teal;
+    width: 40%;
+    height: 50%;
+    border-radius: 25px;
+    margin-right: 20px;
+    flex-direction: column;
+    color: lightblue;
+
+}
+
+a:visited {
+    color: lightblue;
+}
+
+.first_list{
+    list-style: none;
+}
+
+.second_list{
+    list-style: disc;
+}
+
+.third_list{
+    list-style: circle;
+}
+
+.body{
+    background: rgb(5, 5, 46);
+    color: white;
+    border-radius: 25px;
+    padding: 10px;
+}
+
+h2{
+    font-weight:bold;
+}
+
+.keyterm {
+    color: lightblue;
+    text-decoration: underline;
+    
+}
+
+.line_example{
+    color: cornflowerblue;
+}
+
+.footer {
+    display: flex;
+    width: 98%; 
+    background: grey;
+    color: white;
+    border-radius: 10px;
+    margin-top: 15px;
+    padding-left: 15px;
+}
